--- a/assignment-3.html
+++ b/assignment-3.html
@@ -1,73 +1,134 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>主題清單</title>
-    <!-- Ionic CDN -->
-    <script
-      type="module"
-      src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"
-    ></script>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css"
-    />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>開源軟體清單</title>
     <style>
-      .item-content {
-        width: 100%;
-      }
-      .item-title {
-        font-weight: bold;
-        margin: 0.25rem 0;
-      }
-      .item-subtitle {
-        color: var(--ion-color-medium);
-        font-size: 0.9em;
-      }
-      .tag-container {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 0.5rem;
-        margin-top: 0.5rem;
-      }
+        .software-item {
+            border: 1px solid #ccc;
+            margin-bottom: 20px;
+            padding: 15px;
+            border-radius: 5px;
+        }
+        .item-header {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+        }
+        .software-icon {
+            width: 80px;
+            height: 80px;
+            margin-right: 15px;
+            border-radius: 5px;
+            object-fit: contain; /* 確保圖片完整顯示在容器內 */
+        }
+        .software-details {
+            flex-grow: 1;
+        }
+        .detail-label {
+            font-weight: bold;
+            margin-right: 5px;
+        }
+        .video-container {
+            margin-top: 10px;
+        }
+        .video-container iframe, .video-container video {
+            width: 100%;
+            max-width: 600px; /* 限制影片最大寬度 */
+            height: auto;
+            border: none;
+        }
+        /* 簡易響應式設計 */
+        @media (max-width: 600px) {
+            .item-header {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+            .software-icon {
+                margin-bottom: 10px;
+            }
+        }
     </style>
-  </head>
-  <body>
-    <ion-app>
-      <ion-header>
-        <ion-toolbar>
-          <ion-title>主題清單</ion-title>
-        </ion-toolbar>
-        <ion-searchbar placeholder="搜尋..."></ion-searchbar>
-        <ion-item>
-          <ion-select label="分類" interface="popover">
-            <ion-select-option value="">全部</ion-select-option>
-            <!-- 根據主題加入分類選項 -->
-          </ion-select>
-        </ion-item>
-      </ion-header>
+</head>
+<body>
 
-      <ion-content>
-        <ion-list>
-          <!-- 清單項目範本 -->
-          <ion-item class="list-item">
-            <div class="item-content">
-              <div class="item-title">標題</div>
-              <div class="item-subtitle">副標題</div>
-              <div class="item-details">詳細資訊</div>
-              <div class="tag-container">
-                <ion-chip size="small">分類</ion-chip>
-                <!-- 標籤 -->
-              </div>
+    <h1>開源軟體清單</h1>
+
+    <div class="software-item">
+        <div class="item-header">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/Firefox_logo_2017.svg/800px-Firefox_logo_2017.svg.png" alt="Mozilla Firefox 圖示" class="software-icon" width="80" height="80">
+            <div class="software-details">
+                <h2>Mozilla Firefox</h2>
+                <p><span class="detail-label">版本：</span>125.0.1 (截至 2025 年 4 月)</p>
+                <p><span class="detail-label">授權條款：</span>Mozilla Public License 2.0</p>
+                <p><span class="detail-label">用途：</span>網頁瀏覽器，用於存取和瀏覽全球資訊網上的內容。</p>
             </div>
-          </ion-item>
-        </ion-list>
-      </ion-content>
-    </ion-app>
-  </body>
+        </div>
+        <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/nyxufn03QaY?si=bC14-V937P9xNf_b" title="Mozilla Firefox 示範影片" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+    </div>
+
+    <div class="software-item">
+        <div class="item-header">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Tux.svg/800px-Tux.svg.png" alt="Linux (Ubuntu) 圖示" class="software-icon" width="80" height="80">
+            <div class="software-details">
+                <h2>Linux (Ubuntu)</h2>
+                <p><span class="detail-label">版本：</span>24.04 LTS (Noble Numbat) (截至 2025 年 4 月)</p>
+                <p><span class="detail-label">授權條款：</span>GNU General Public License (GPL)</p>
+                <p><span class="detail-label">用途：</span>作業系統，提供電腦硬體和軟體資源的管理，並為應用程式提供執行環境。</p>
+            </div>
+        </div>
+        <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/FihV31mD-Y4?si=F0g0e06W9WjS6aQ7" title="Ubuntu 24.04 LTS 示範影片" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+    </div>
+
+    <div class="software-item">
+        <div class="item-header">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/LibreOffice_logo.svg/800px-LibreOffice_logo.svg.png" alt="LibreOffice 圖示" class="software-icon" width="80" height="80">
+            <div class="software-details">
+                <h2>LibreOffice</h2>
+                <p><span class="detail-label">版本：</span>24.2.3 (截至 2025 年 4 月)</p>
+                <p><span class="detail-label">授權條款：</span>Mozilla Public License v2.0</p>
+                <p><span class="detail-label">用途：</span>辦公室生產力套件，包含文書處理、試算表、簡報、資料庫和繪圖等應用程式。</p>
+            </div>
+        </div>
+        <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/aK0cWk32x-Y?si=W8j6X9f_4890v31w" title="LibreOffice 7.6 示範影片" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+    </div>
+
+    <div class="software-item">
+        <div class="item-header">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/GIMP_logo.svg/800px-GIMP_logo.svg.png" alt="GIMP 圖示" class="software-icon" width="80" height="80">
+            <div class="software-details">
+                <h2>GIMP</h2>
+                <p><span class="detail-label">版本：</span>2.10.36 (截至 2025 年 4 月)</p>
+                <p><span class="detail-label">授權條款：</span>GNU General Public License v3.0</p>
+                <p><span class="detail-label">用途：</span>光柵圖形編輯器，用於圖像修飾、合成和建立。</p>
+            </div>
+        </div>
+        <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/5ILW-4iY0qQ?si=40zV15l99xL9z82H" title="GIMP 2.10 功能示範" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+    </div>
+
+    <div class="software-item">
+        <div class="item-header">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Git-logo.svg/800px-Git-logo.svg.png" alt="Git 圖示" class="software-icon" width="80" height="80">
+            <div class="software-details">
+                <h2>Git</h2>
+                <p><span class="detail-label">版本：</span>2.45.0 (截至 2025 年 4 月)</p>
+                <p><span class="detail-label">授權條款：</span>GNU General Public License v2.0</p>
+                <p><span class="detail-label">用途：</span>分散式版本控制系統，用於追蹤程式碼的變更。</p>
+            </div>
+        </div>
+        <div class="video-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/HVsyH1mktmI?si=o557F9z7pB8fW5qK" title="Git 基礎示範" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+    </div>
+
+</body>
 </html>
