--- a/assignment-3.html
+++ b/assignment-3.html
@@ -55,80 +55,116 @@
 
     <h1>開源軟體清單</h1>
 
-    <div class="software-item">
-        <div class="item-header">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/Firefox_logo_2017.svg/800px-Firefox_logo_2017.svg.png" alt="Mozilla Firefox 圖示" class="software-icon" width="80" height="80">
-            <div class="software-details">
-                <h2>Mozilla Firefox</h2>
-                <p><span class="detail-label">版本：</span>125.0.1 (截至 2025 年 4 月)</p>
-                <p><span class="detail-label">授權條款：</span>Mozilla Public License 2.0</p>
-                <p><span class="detail-label">用途：</span>網頁瀏覽器，用於存取和瀏覽全球資訊網上的內容。</p>
+    <input type="text" id="searchInput" placeholder="搜尋...">
+
+    <div id="softwareListContainer">
+        <div class="software-item">
+            <div class="item-header">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/Firefox_logo_2017.svg/800px-Firefox_logo_2017.svg.png" alt="Mozilla Firefox 圖示" class="software-icon" width="80" height="80">
+                <div class="software-details">
+                    <h2>Mozilla Firefox</h2>
+                    <p><span class="detail-label">版本：</span>125.0.1 (截至 2025 年 4 月)</p>
+                    <p><span class="detail-label">授權條款：</span>Mozilla Public License 2.0</p>
+                    <p><span class="detail-label">用途：</span>網頁瀏覽器，用於存取和瀏覽全球資訊網上的內容。</p>
+                </div>
+            </div>
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/nyxufn03QaY?si=bC14-V937P9xNf_b" title="Mozilla Firefox 示範影片" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
         </div>
-        <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/nyxufn03QaY?si=bC14-V937P9xNf_b" title="Mozilla Firefox 示範影片" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+        <div class="software-item">
+            <div class="item-header">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Tux.svg/800px-Tux.svg.png" alt="Linux (Ubuntu) 圖示" class="software-icon" width="80" height="80">
+                <div class="software-details">
+                    <h2>Linux (Ubuntu)</h2>
+                    <p><span class="detail-label">版本：</span>24.04 LTS (Noble Numbat) (截至 2025 年 4 月)</p>
+                    <p><span class="detail-label">授權條款：</span>GNU General Public License (GPL)</p>
+                    <p><span class="detail-label">用途：</span>作業系統，提供電腦硬體和軟體資源的管理，並為應用程式提供執行環境。</p>
+                </div>
+            </div>
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/FihV31mD-Y4?si=F0g0e06W9WjS6aQ7" title="Ubuntu 24.04 LTS 示範影片" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+        </div>
+
+        <div class="software-item">
+            <div class="item-header">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/LibreOffice_logo.svg/800px-LibreOffice_logo.svg.png" alt="LibreOffice 圖示" class="software-icon" width="80" height="80">
+                <div class="software-details">
+                    <h2>LibreOffice</h2>
+                    <p><span class="detail-label">版本：</span>24.2.3 (截至 2025 年 4 月)</p>
+                    <p><span class="detail-label">授權條款：</span>Mozilla Public License v2.0</p>
+                    <p><span class="detail-label">用途：</span>辦公室生產力套件，包含文書處理、試算表、簡報、資料庫和繪圖等應用程式。</p>
+                </div>
+            </div>
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/aK0cWk32x-Y?si=W8j6X9f_4890v31w" title="LibreOffice 7.6 示範影片" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+        </div>
+
+        <div class="software-item">
+            <div class="item-header">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/GIMP_logo.svg/800px-GIMP_logo.svg.png" alt="GIMP 圖示" class="software-icon" width="80" height="80">
+                <div class="software-details">
+                    <h2>GIMP</h2>
+                    <p><span class="detail-label">版本：</span>2.10.36 (截至 2025 年 4 月)</p>
+                    <p><span class="detail-label">授權條款：</span>GNU General Public License v3.0</p>
+                    <p><span class="detail-label">用途：</span>光柵圖形編輯器，用於圖像修飾、合成和建立。</p>
+                </div>
+            </div>
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/5ILW-4iY0qQ?si=40zV15l99xL9z82H" title="GIMP 2.10 功能示範" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+        </div>
+
+        <div class="software-item">
+            <div class="item-header">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Git-logo.svg/800px-Git-logo.svg.png" alt="Git 圖示" class="software-icon" width="80" height="80">
+                <div class="software-details">
+                    <h2>Git</h2>
+                    <p><span class="detail-label">版本：</span>2.45.0 (截至 2025 年 4 月)</p>
+                    <p><span class="detail-label">授權條款：</span>GNU General Public License v2.0</p>
+                    <p><span class="detail-label">用途：</span>分散式版本控制系統，用於追蹤程式碼的變更。</p>
+                </div>
+            </div>
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/HVsyH1mktmI?si=o557F9z7pB8fW5qK" title="Git 基礎示範" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
         </div>
     </div>
 
-    <div class="software-item">
-        <div class="item-header">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Tux.svg/800px-Tux.svg.png" alt="Linux (Ubuntu) 圖示" class="software-icon" width="80" height="80">
-            <div class="software-details">
-                <h2>Linux (Ubuntu)</h2>
-                <p><span class="detail-label">版本：</span>24.04 LTS (Noble Numbat) (截至 2025 年 4 月)</p>
-                <p><span class="detail-label">授權條款：</span>GNU General Public License (GPL)</p>
-                <p><span class="detail-label">用途：</span>作業系統，提供電腦硬體和軟體資源的管理，並為應用程式提供執行環境。</p>
-            </div>
-        </div>
-        <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/FihV31mD-Y4?si=F0g0e06W9WjS6aQ7" title="Ubuntu 24.04 LTS 示範影片" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </div>
-    </div>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const searchInput = document.getElementById('searchInput');
+            const softwareListContainer = document.getElementById('softwareListContainer');
+            const originalItems = Array.from(softwareListContainer.children);
 
-    <div class="software-item">
-        <div class="item-header">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/LibreOffice_logo.svg/800px-LibreOffice_logo.svg.png" alt="LibreOffice 圖示" class="software-icon" width="80" height="80">
-            <div class="software-details">
-                <h2>LibreOffice</h2>
-                <p><span class="detail-label">版本：</span>24.2.3 (截至 2025 年 4 月)</p>
-                <p><span class="detail-label">授權條款：</span>Mozilla Public License v2.0</p>
-                <p><span class="detail-label">用途：</span>辦公室生產力套件，包含文書處理、試算表、簡報、資料庫和繪圖等應用程式。</p>
-            </div>
-        </div>
-        <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/aK0cWk32x-Y?si=W8j6X9f_4890v31w" title="LibreOffice 7.6 示範影片" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </div>
-    </div>
+            searchInput.addEventListener('input', (event) => {
+                const searchTerm = event.target.value.toLowerCase();
+                softwareListContainer.innerHTML = ''; // 清空現有列表
 
-    <div class="software-item">
-        <div class="item-header">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/GIMP_logo.svg/800px-GIMP_logo.svg.png" alt="GIMP 圖示" class="software-icon" width="80" height="80">
-            <div class="software-details">
-                <h2>GIMP</h2>
-                <p><span class="detail-label">版本：</span>2.10.36 (截至 2025 年 4 月)</p>
-                <p><span class="detail-label">授權條款：</span>GNU General Public License v3.0</p>
-                <p><span class="detail-label">用途：</span>光柵圖形編輯器，用於圖像修飾、合成和建立。</p>
-            </div>
-        </div>
-        <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/5ILW-4iY0qQ?si=40zV15l99xL9z82H" title="GIMP 2.10 功能示範" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </div>
-    </div>
+                originalItems.forEach(item => {
+                    const titleElement = item.querySelector('.software-details h2');
+                    const descriptionElement = item.querySelector('.software-details p:nth-child(3)'); // 用途通常是第三個 <p>
 
-    <div class="software-item">
-        <div class="item-header">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Git-logo.svg/800px-Git-logo.svg.png" alt="Git 圖示" class="software-icon" width="80" height="80">
-            <div class="software-details">
-                <h2>Git</h2>
-                <p><span class="detail-label">版本：</span>2.45.0 (截至 2025 年 4 月)</p>
-                <p><span class="detail-label">授權條款：</span>GNU General Public License v2.0</p>
-                <p><span class="detail-label">用途：</span>分散式版本控制系統，用於追蹤程式碼的變更。</p>
-            </div>
-        </div>
-        <div class="video-container">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/HVsyH1mktmI?si=o557F9z7pB8fW5qK" title="Git 基礎示範" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-        </div>
-    </div>
+                    if (titleElement && descriptionElement) {
+                        const title = titleElement.textContent.toLowerCase();
+                        const description = descriptionElement.textContent.toLowerCase();
+
+                        if (title.includes(searchTerm) || description.includes(searchTerm)) {
+                            softwareListContainer.appendChild(item.cloneNode(true));
+                        }
+                    }
+                });
+
+                // 如果搜尋框為空，則顯示原始清單
+                if (searchTerm === '') {
+                    originalItems.forEach(item => softwareListContainer.appendChild(item.cloneNode(true)));
+                }
+            });
+        });
+    </script>
 
 </body>
 </html>
