--- a/assignment-3.html
+++ b/assignment-3.html
@@ -4,7 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>開源軟體清單</title>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
+    <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css" />
     <style>
+        ion-item {
+            --inner-padding-end: 10px;
+        }
+        ion-avatar {
+            margin-right: 10px;
+        }
+        .video-container {
+            margin-top: 10px;
+        }
+        .video-container iframe {
+            width: 100%;
+            max-width: 560px;
+            height: 315px;
+            border: none;
+        }
+        /* 簡易響應式設計 */
+        @media (max-width: 600px) {
+            .video-container iframe {
+                height: 200px;
+            }
+        }
         .software-item {
             border: 1px solid #ccc;
             margin-bottom: 20px;
@@ -30,138 +54,166 @@
             font-weight: bold;
             margin-right: 5px;
         }
-        .video-container {
-            margin-top: 10px;
+        .category-tag {
+            color: var(--ion-color-primary);
+            cursor: pointer;
         }
-        .video-container iframe, .video-container video {
-            width: 100%;
-            max-width: 600px; /* 限制影片最大寬度 */
-            height: auto;
-            border: none;
-        }
-        /* 簡易響應式設計 */
-        @media (max-width: 600px) {
-            .item-header {
-                flex-direction: column;
-                align-items: flex-start;
-            }
-            .software-icon {
-                margin-bottom: 10px;
-            }
+        .hidden {
+            display: none !important;
         }
     </style>
 </head>
 <body>
+    <ion-app>
+        <ion-header>
+            <ion-toolbar>
+                <ion-title>開源軟體清單</ion-title>
+            </ion-toolbar>
+            <ion-searchbar placeholder="搜尋..."></ion-searchbar>
+            <ion-item>
+                <ion-select label="分類" interface="popover" id="categorySelect">
+                    <ion-select-option value="">全部</ion-select-option>
+                    <ion-select-option value="網頁瀏覽器">網頁瀏覽器</ion-select-option>
+                    <ion-select-option value="作業系統">作業系統</ion-select-option>
+                    <ion-select-option value="辦公室軟體">辦公室軟體</ion-select-option>
+                    <ion-select-option value="圖像編輯器">圖像編輯器</ion-select-option>
+                    <ion-select-option value="版本控制">版本控制</ion-select-option>
+                </ion-select>
+            </ion-item>
+        </ion-header>
+        <ion-content>
+            <div id="softwareListContainer">
+                <div class="software-item" data-category="網頁瀏覽器">
+                    <div class="item-header">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/Firefox_logo_2017.svg/800px-Firefox_logo_2017.svg.png" alt="Mozilla Firefox 圖示" class="software-icon" width="80" height="80">
+                        <div class="software-details">
+                            <h2>Mozilla Firefox</h2>
+                            <p><span class="detail-label">版本：</span>125.0.1 (截至 2025 年 4 月)</p>
+                            <p><span class="detail-label">授權條款：</span>Mozilla Public License 2.0</p>
+                            <p><span class="detail-label">用途：</span><span class="category-tag">網頁瀏覽器</span>，用於存取和瀏覽全球資訊網上的內容。</p>
+                        </div>
+                    </div>
+                    <div class="video-container">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/agboT1w_e4g" title="Mozilla Firefox 示範影片" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                </div>
 
-    <h1>開源軟體清單</h1>
+                <div class="software-item" data-category="作業系統">
+                    <div class="item-header">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Tux.svg/800px-Tux.svg.png" alt="Linux (Ubuntu) 圖示" class="software-icon" width="80" height="80">
+                        <div class="software-details">
+                            <h2>Linux (Ubuntu)</h2>
+                            <p><span class="detail-label">版本：</span>24.04 LTS (Noble Numbat) (截至 2025 年 4 月)</p>
+                            <p><span class="detail-label">授權條款：</span>GNU General Public License (GPL)</p>
+                            <p><span class="detail-label">用途：</span><span class="category-tag">作業系統</span>，提供電腦硬體和軟體資源的管理，並為應用程式提供執行環境。</p>
+                        </div>
+                    </div>
+                    <div class="video-container">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/mS4Ci-zZ9A4" title="Ubuntu 24.04 LTS 示範影片" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                </div>
 
-    <input type="text" id="searchInput" placeholder="搜尋...">
+                <div class="software-item" data-category="辦公室軟體">
+                    <div class="item-header">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/LibreOffice_logo.svg/800px-LibreOffice_logo.svg.png" alt="LibreOffice 圖示" class="software-icon" width="80" height="80">
+                        <div class="software-details">
+                            <h2>LibreOffice</h2>
+                            <p><span class="detail-label">版本：</span>24.2.3 (截至 2025 年 4 月)</p>
+                            <p><span class="detail-label">授權條款：</span>Mozilla Public License v2.0</p>
+                            <p><span class="detail-label">用途：</span><span class="category-tag">辦公室軟體</span>，包含文書處理、試算表、簡報、資料庫和繪圖等應用程式。</p>
+                        </div>
+                    </div>
+                    <div class="video-container">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/nF0-612j61I" title="LibreOffice 7.6 示範影片" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                </div>
 
-    <div id="softwareListContainer">
-        <div class="software-item">
-            <div class="item-header">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/Firefox_logo_2017.svg/800px-Firefox_logo_2017.svg.png" alt="Mozilla Firefox 圖示" class="software-icon" width="80" height="80">
-                <div class="software-details">
-                    <h2>Mozilla Firefox</h2>
-                    <p><span class="detail-label">版本：</span>125.0.1 (截至 2025 年 4 月)</p>
-                    <p><span class="detail-label">授權條款：</span>Mozilla Public License 2.0</p>
-                    <p><span class="detail-label">用途：</span>網頁瀏覽器，用於存取和瀏覽全球資訊網上的內容。</p>
+                <div class="software-item" data-category="圖像編輯器">
+                    <div class="item-header">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/GIMP_logo.svg/800px-GIMP_logo.svg.png" alt="GIMP 圖示" class="software-icon" width="80" height="80">
+                        <div class="software-details">
+                            <h2>GIMP</h2>
+                            <p><span class="detail-label">版本：</span>2.10.36 (截至 2025 年 4 月)</p>
+                            <p><span class="detail-label">授權條款：</span>GNU General Public License v3.0</p>
+                            <p><span class="detail-label">用途：</span><span class="category-tag">圖像編輯器</span>，用於圖像修飾、合成和建立。</p>
+                        </div>
+                    </div>
+                    <div class="video-container">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/9ylj97R3R7s" title="GIMP 2.10 功能示範" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                </div>
+
+                <div class="software-item" data-category="版本控制">
+                    <div class="item-header">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Git-logo.svg/800px-Git-logo.svg.png" alt="Git 圖示" class="software-icon" width="80" height="80">
+                        <div class="software-details">
+                            <h2>Git</h2>
+                            <p><span class="detail-label">版本：</span>2.45.0 (截至 2025 年 4 月)</p>
+                            <p><span class="detail-label">授權條款：</span>GNU General Public License v2.0</p>
+                            <p><span class="detail-label">用途：</span><span class="category-tag">版本控制</span>，分散式版本控制系統，用於追蹤程式碼的變更。</p>
+                        </div>
+                    </div>
+                    <div class="video-container">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/qw--VYLhZUE" title="Git 基礎示範" frameborder="0" allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
-            <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/nyxufn03QaY?si=bC14-V937P9xNf_b" title="Mozilla Firefox 示範影片" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </div>
-        </div>
-
-        <div class="software-item">
-            <div class="item-header">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Tux.svg/800px-Tux.svg.png" alt="Linux (Ubuntu) 圖示" class="software-icon" width="80" height="80">
-                <div class="software-details">
-                    <h2>Linux (Ubuntu)</h2>
-                    <p><span class="detail-label">版本：</span>24.04 LTS (Noble Numbat) (截至 2025 年 4 月)</p>
-                    <p><span class="detail-label">授權條款：</span>GNU General Public License (GPL)</p>
-                    <p><span class="detail-label">用途：</span>作業系統，提供電腦硬體和軟體資源的管理，並為應用程式提供執行環境。</p>
-                </div>
-            </div>
-            <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/FihV31mD-Y4?si=F0g0e06W9WjS6aQ7" title="Ubuntu 24.04 LTS 示範影片" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </div>
-        </div>
-
-        <div class="software-item">
-            <div class="item-header">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/43/LibreOffice_logo.svg/800px-LibreOffice_logo.svg.png" alt="LibreOffice 圖示" class="software-icon" width="80" height="80">
-                <div class="software-details">
-                    <h2>LibreOffice</h2>
-                    <p><span class="detail-label">版本：</span>24.2.3 (截至 2025 年 4 月)</p>
-                    <p><span class="detail-label">授權條款：</span>Mozilla Public License v2.0</p>
-                    <p><span class="detail-label">用途：</span>辦公室生產力套件，包含文書處理、試算表、簡報、資料庫和繪圖等應用程式。</p>
-                </div>
-            </div>
-            <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/aK0cWk32x-Y?si=W8j6X9f_4890v31w" title="LibreOffice 7.6 示範影片" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </div>
-        </div>
-
-        <div class="software-item">
-            <div class="item-header">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/GIMP_logo.svg/800px-GIMP_logo.svg.png" alt="GIMP 圖示" class="software-icon" width="80" height="80">
-                <div class="software-details">
-                    <h2>GIMP</h2>
-                    <p><span class="detail-label">版本：</span>2.10.36 (截至 2025 年 4 月)</p>
-                    <p><span class="detail-label">授權條款：</span>GNU General Public License v3.0</p>
-                    <p><span class="detail-label">用途：</span>光柵圖形編輯器，用於圖像修飾、合成和建立。</p>
-                </div>
-            </div>
-            <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/5ILW-4iY0qQ?si=40zV15l99xL9z82H" title="GIMP 2.10 功能示範" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </div>
-        </div>
-
-        <div class="software-item">
-            <div class="item-header">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Git-logo.svg/800px-Git-logo.svg.png" alt="Git 圖示" class="software-icon" width="80" height="80">
-                <div class="software-details">
-                    <h2>Git</h2>
-                    <p><span class="detail-label">版本：</span>2.45.0 (截至 2025 年 4 月)</p>
-                    <p><span class="detail-label">授權條款：</span>GNU General Public License v2.0</p>
-                    <p><span class="detail-label">用途：</span>分散式版本控制系統，用於追蹤程式碼的變更。</p>
-                </div>
-            </div>
-            <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/HVsyH1mktmI?si=o557F9z7pB8fW5qK" title="Git 基礎示範" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </div>
-        </div>
-    </div>
+        </ion-content>
+    </ion-app>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const searchInput = document.getElementById('searchInput');
             const softwareListContainer = document.getElementById('softwareListContainer');
-            const originalItems = Array.from(softwareListContainer.children);
+            const categorySelect = document.getElementById('categorySelect');
+            const softwareItems = document.querySelectorAll('.software-item');
 
+            // 實作搜尋功能
             searchInput.addEventListener('input', (event) => {
                 const searchTerm = event.target.value.toLowerCase();
-                softwareListContainer.innerHTML = ''; // 清空現有列表
-
-                originalItems.forEach(item => {
+                softwareItems.forEach(item => {
                     const titleElement = item.querySelector('.software-details h2');
-                    const descriptionElement = item.querySelector('.software-details p:nth-child(3)'); // 用途通常是第三個 <p>
+                    const descriptionElement = item.querySelector('.software-details p:nth-child(3)');
 
-                    if (titleElement && descriptionElement) {
-                        const title = titleElement.textContent.toLowerCase();
-                        const description = descriptionElement.textContent.toLowerCase();
+                    const title = titleElement ? titleElement.textContent.toLowerCase() : '';
+                    const description = descriptionElement ? descriptionElement.textContent.toLowerCase() : '';
 
-                        if (title.includes(searchTerm) || description.includes(searchTerm)) {
-                            softwareListContainer.appendChild(item.cloneNode(true));
-                        }
+                    if (title.includes(searchTerm) || description.includes(searchTerm)) {
+                        item.classList.remove('hidden');
+                    } else {
+                        item.classList.add('hidden');
                     }
                 });
+            });
 
-                // 如果搜尋框為空，則顯示原始清單
-                if (searchTerm === '') {
-                    originalItems.forEach(item => softwareListContainer.appendChild(item.cloneNode(true)));
-                }
+            // 實作分類過濾
+            categorySelect.addEventListener('ionChange', (event) => {
+                const selectedCategory = event.detail.value;
+                softwareItems.forEach(item => {
+                    const category = item.dataset.category;
+                    if (selectedCategory === '' || category === selectedCategory) {
+                        item.classList.remove('hidden');
+                    } else {
+                        item.classList.add('hidden');
+                    }
+                });
+            });
+
+            // 點擊類別標籤快速過濾
+            const categoryTags = document.querySelectorAll('.category-tag');
+            categoryTags.forEach(tag => {
+                tag.addEventListener('click', (event) => {
+                    const category = event.target.textContent;
+                    categorySelect.value = category; // 同步更新下拉選單
+                    softwareItems.forEach(item => {
+                        const itemCategory = item.dataset.category;
+                        if (category === itemCategory) {
+                            item.classList.remove('hidden');
+                        } else {
+                            item.classList.add('hidden');
+                        }
+                    });
+                });
             });
         });
     </script>
